# openapi/openapi.yaml
@@ -85,6 +85,40 @@ paths:
                 $ref: "#/components/schemas/TaxLotBasicPage"
         '400':
             $ref: "#/components/responses/BadRequest"
+  /tax-lots/labels/{z}/{x}/{y}.pbf:
+    get:
+      summary: Mapbox Vector Tiles for tax lot labels
+      operationId: findTaxLotLabels
+      tags:
+        - Tax Lots
+        - MVT
+      parameters:
+        - $ref: '#/components/parameters/viewportZoomParam'
+        - $ref: '#/components/parameters/viewportXParam'
+        - $ref: '#/components/parameters/viewportYParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/MVT'
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+  /tax-lots/fills/{z}/{x}/{y}.pbf:
+    get:
+      summary: Mapbox Vector Tiles for tax lot fills
+      operationId: findTaxLotFills
+      tags:
+        - Tax Lots
+        - MVT
+      parameters:
+        - $ref: '#/components/parameters/viewportZoomParam'
+        - $ref: '#/components/parameters/viewportXParam'
+        - $ref: '#/components/parameters/viewportYParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/MVT'
+        '400':
+          $ref: "#/components/responses/BadRequest"
         '500':
           $ref: "#/components/responses/InternalServerError"
   /tax-lots/{bbl}:
@@ -186,6 +220,42 @@ paths:
             $ref: "#/components/responses/BadRequest"
         '404':
           $ref: "#/components/responses/NotFound"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+  /zoning-districts/labels/{z}/{x}/{y}.pbf:
+    get:
+      summary: Mapbox Vector Tiles for zoning district labels
+      operationId: findZoningDistrictLabels
+      tags:
+        - Zoning Districts
+        - MVT
+      parameters:
+        - $ref: '#/components/parameters/viewportZoomParam'
+        - $ref: '#/components/parameters/viewportXParam'
+        - $ref: '#/components/parameters/viewportYParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/MVT'
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+  /zoning-districts/fills/{z}/{x}/{y}.pbf:
+    get:
+      summary: Mapbox Vector Tiles for zoning district fills
+      operationId: findZoningDistrictFills
+      tags:
+        - Zoning Districts
+        - MVT
+      parameters:
+        - $ref: '#/components/parameters/viewportZoomParam'
+        - $ref: '#/components/parameters/viewportXParam'
+        - $ref: '#/components/parameters/viewportYParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/MVT'
+        '400':
+          $ref: "#/components/responses/BadRequest"
         '500':
           $ref: "#/components/responses/InternalServerError"
   /zoning-districts/{id}:
@@ -323,6 +393,30 @@ paths:
           $ref: "#/components/responses/InternalServerError"
 components:
   parameters: 
+    viewportZoomParam:
+      name: z
+      in: path
+      description: viewport zoom component
+      required: true
+      schema:
+        type: string
+        pattern: '^([0-9]+)$'
+    viewportXParam:
+      name: x
+      in: path
+      description: viewport x component
+      required: true
+      schema:
+        type: string
+        pattern: '^([0-9]+)$'
+    viewportYParam:
+      name: y
+      in: path
+      description: viewport y component
+      required: true
+      schema:
+        type: string
+        pattern: '^([0-9]+)$'
     bblParam:
       name: bbl
       required: true
@@ -687,6 +781,13 @@ components:
           required:
             - taxLots
   responses:
+    MVT:
+      description: A protobuf file formatted as Mapbox Vector Tile
+      content:
+        application/x-protobuf:
+          schema:
+            type: string
+            format: binary
     BadRequest:
       description: Invalid client request
       content:
